# CoreAmp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  PRD.md  README.md  SECURITY.md  TODO.md  llms.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  package.yml
coreamp-app/: Cargo.toml  tauri.conf.json
coreamp-app/capabilities/: default.json
coreamp-app/src/: main.rs
coreamp-common/: Cargo.toml
coreamp-common/src/: db.rs  ipc.rs  lib.rs  library.rs  metadata.rs  musicbrainz.rs  playlist.rs  settings.rs
coreamp-daemon/: Cargo.toml
coreamp-daemon/src/: main.rs
deploy/: README.md
deploy/launchd/: com.coreamp.daemon.plist
deploy/systemd/: coreamp-daemon.service
docs/superpowers/specs/: 2026-03-14-astro-chicken-game-design.md  2026-03-14-visualizer-upgrade-design.md
packaging/: README.md
packaging/linux/: build-appimage.sh  build-deb.sh
packaging/macos/: build-app-m2.sh  build-app.sh  entitlements.plist
profiling/: startup-baseline.md
scripts/: profile-startup.sh
snap/: snapcraft.yaml
