[package]
name = "coreamp-app"
version = "0.1.0"
edition = "2024"

[features]
default = []
video = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
coreamp-common = { path = "../coreamp-common" }
rodio = "0.22"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["tray-icon"] }
