[package]
name = "coreamp-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
video = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
coreamp-common = { path = "../coreamp-common" }
rodio = "0.22"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["tray-icon"] }
