[package]
name = "coreamp-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
video = []
devtools = ["tauri/devtools"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
coreamp-common = { path = "../coreamp-common" }
rodio = "0.22"
serde = { version = "1", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
