[package]
name = "coreamp-common"
version = "0.1.0"
edition = "2024"

[dependencies]
lofty = "0.23"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls"] }
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
