[package]
name = "coreamp-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lofty = "0.23"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls"] }
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
